change theatre version to @latest in npm install

--- a/content/docs/0.5/100-getting-started/100-with-react-three-fiber.mdx
+++ b/content/docs/0.5/100-getting-started/100-with-react-three-fiber.mdx
@@ -32,7 +32,7 @@ Run the commands below to install the dependencies we'll be using.
 npm install --save react three @react-three/fiber
 
 # Theatre.js
-npm install --save @theatre/core@0.5 @theatre/studio@0.5 @theatre/r3f@0.5
+npm install --save @theatre/core@latest @theatre/studio@latest @theatre/r3f@latest
 
 # Three.js types (when using Typescript)
 npm install --save-dev @types/three
